fix: hide SideBarWrapper initially to avoid layout shift on mobile

--- a/gatsby-theme-portfolio-minimal/src/components/Header/style.module.css
+++ b/gatsby-theme-portfolio-minimal/src/components/Header/style.module.css
@@ -110,7 +110,7 @@
 .SideBarWrapper {
     position: fixed;
     z-index: 10;
-    display: block;
+    display: none;
     top: 0;
     bottom: 0;
     right: 0;
